// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Atomic UI (Diamond Snapshot) > Circle mode snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <button
    class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-6 py-3 text-xs gap-2 
        rounded-full aspect-square !p-0 
        
        w-10 h-10
      "
  >
    <div
      class="
          
          
        "
    >
      X
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Atomic UI (Diamond Snapshot) > Disabled state snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <button
    class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-6 py-3 text-xs gap-2 
        rounded-2xl 
        
        
      "
    disabled=""
  >
    <div
      class="
          
          
        "
    >
      Disabled
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Atomic UI (Diamond Snapshot) > Ghost variant snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <button
    class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        text-stone-500 hover:bg-stone-50 hover:text-stone-900 
        px-6 py-3 text-xs gap-2 
        rounded-2xl 
        
        
      "
  >
    <div
      class="
          
          
        "
    >
      Ghost Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Atomic UI (Diamond Snapshot) > Loading state snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <button
    class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-6 py-3 text-xs gap-2 
        rounded-2xl 
        
        
      "
    disabled=""
  >
    <div
      class="absolute inset-0 bg-inherit flex items-center justify-center"
    >
      <div
        class="w-4 h-4 border-2 border-current border-t-transparent rounded-full animate-spin"
      />
    </div>
    <div
      class="
          
          
        "
    >
      Loading
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Atomic UI (Diamond Snapshot) > Primary variant snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <button
    class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-900 text-white hover:bg-stone-800 shadow-lg shadow-stone-200 
        px-6 py-3 text-xs gap-2 
        rounded-2xl 
        
        
      "
  >
    <div
      class="
          
          
        "
    >
      Primary Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Atomic UI (Diamond Snapshot) > Secondary variant snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <button
    class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-6 py-3 text-xs gap-2 
        rounded-2xl 
        
        
      "
  >
    <div
      class="
          
          
        "
    >
      Secondary Button
    </div>
  </button>
</DocumentFragment>
`;
